Refactored some variables and class names. Fixed code readability and indetation.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,7 +7,8 @@ h1 {
 	font-weight: normal; 
 	line-height: 48px; 
 	margin: 0; 
-	text-align: center;}
+	text-align: center;
+	}
 
 h2 { 
 	color: #111; 
@@ -16,7 +17,8 @@ h2 {
 	font-weight: 300; 
 	line-height: 32px; 
 	margin: 0 0 72px; 
-	text-align: center; }
+	text-align: center; 
+	}
 	
 h3 {
 	color: #111; 
@@ -26,27 +28,27 @@ h3 {
 	line-height: 32px; 
 	margin: 0 0 72px; 
 	text-align: center;
-	
-}
+	}
 
 button {
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #ffffff;
-  background-color: #393937;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-}
+	display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #ffffff;
+    background-color: #393937;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+	}
 
 button:hover {background-color: #3e8e41}
+
 button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+	}
